cabal-version:       2.4
name:                row-components
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/gusbicalho/row-components#row-components) for more details.
homepage:            https://github.com/gusbicalho/row-components
bug-reports:         https://github.com/gusbicalho/row-components/issues
license:             MIT
license-file:        LICENSE
author:              Gustavo Bicalho
maintainer:          Gustavo Bicalho <gusbicalho@gmail.com>
copyright:           2020 Gustavo Bicalho
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3
                     GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/gusbicalho/row-components.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 4.15
                     , base-prelude

  mixins:              base hiding (Prelude)
                     , base-prelude (BasePrelude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     RowComponents

test-suite row-components-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       row-components
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
